# mirlib

./: .clang-format  CMakeLists.txt  LICENSE
include/mir/common/: arith.h  assert.h  env.h  macros.h  mem.h  unicode.h
include/mir/common/collections/: arr.h  vec.h
include/mir/common/encodings/: utf8.h
include/mir/internal/: assert.h
include/mir/stdlib/: stdint.h
src/mir/common/: mem.c
src/mir/common/collections/: arr.c  vec.c
src/mir/common/encodings/: utf8.c
src/mir/rt/linux/x86_64/: crt0.S
tests/: CMakeLists.txt  tests.cmake
tests/include/mir/tests/: common.h  testinfo.h
tests/src/: common.c  test.c  testinfo.c
